--- a/AhReview/app/src/main/res/layout/activity_write_review.xml
+++ b/AhReview/app/src/main/res/layout/activity_write_review.xml
@@ -88,16 +88,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="정태환님"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/sub_title"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="20dp"
                             android:text="익명"
                             android:textColor="@color/black"
                             android:textSize="@dimen/sub_title"
@@ -159,7 +149,6 @@
                         android:layout_height="80dp"
                         android:background="@drawable/image_background_corner"
                         android:gravity="center"
-                        android:onClick="@{vm::openImagePicker}"
                         android:orientation="vertical">
 
                         <ImageView
@@ -170,15 +159,15 @@
 
                     </LinearLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_write_post_image"
-                        android:layout_marginLeft="10dp"
+                    <EditText
+                        android:id="@+id/input_imageUrl"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:itemCount="3"
-                        tools:listitem="@layout/item_image_write_review" />
+                        android:layout_gravity="center"
+                        android:layout_margin="8dp"
+                        android:hint="이미지 url"
+                        android:inputType="text"
+                        android:text="@={vm.imageUrl}" />
 
                 </LinearLayout>
 
