--- a/AhReview/app/src/main/res/layout/store_item.xml
+++ b/AhReview/app/src/main/res/layout/store_item.xml
@@ -11,6 +11,7 @@
         android:id="@+id/store_item_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:background="@drawable/review_background"
         android:elevation="4dp">
 
