[FIX] 서버 통신 오류 수정 & 마무리

--- a/AhReview/app/src/main/res/layout/detail_review_item.xml
+++ b/AhReview/app/src/main/res/layout/detail_review_item.xml
@@ -122,10 +122,10 @@
                 android:id="@+id/imageBtn_speaker2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
                 android:background="@android:color/transparent"
                 android:padding="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_speaker" />
@@ -214,10 +214,10 @@
                     android:id="@+id/imageBtn_speaker3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="4dp"
                     android:background="@android:color/transparent"
                     android:padding="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_speaker" />
